--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <div class="align-left aside-content">
                     
                     <div class="mbr-section-text">
-                        <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-5"><strong>分割払い</strong></p>
-                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-5">合計100,000円を10回払い<br>月々 10,000円でのご提供になります。</p>
+                        <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-5"><strong>一括払い</strong></p>
+                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-5">100,000円でのご提供になります。</p>
                     </div>
                     <!--Btn-->
                     <div class="mbr-section-btn pt-3 align-left">
